--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "express": "~4.16.1",
     "fs": "^0.0.1-security",
     "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "mongoose": "^6.0.12",
-    "morgan": "~1.9.1",
-    "pug": "^3.0.2"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
