--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "mini-message-board",
   "engines": {
-    "node": "16.11.1"
+    "node": "20.15.0"
   },
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "devStart": "nodemon app.js"
+    "dev": "node --watch --env-file=.env ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -17,8 +17,5 @@
     "fs": "^0.0.1-security",
     "http-errors": "~1.6.3",
     "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.14"
   }
 }
